csv-server/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: csvserver-ingress
spec:
  tls:
  - hosts:
      - "csvserver.example.com"
    secretName: tls-demo-secret
  ingressClassName: nginx
  rules:
  - host: "csvserver.example.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: csv-svc
            port:
              number: 9300
